# gnosis_vpn-server

./: .gitignore  .gitmodules  Cargo.toml  README.md  config.toml  docker-compose.yml  flake.nix  justfile
.github/workflows/: build-binaries.yaml  build.yml  merge.yaml  release.yaml
docker/: Dockerfile  config.toml  wggvpn.conf  wrapper.sh
docker-client/: Dockerfile  monitor.sh  wgclient.conf
docker-server/: wggvpn.conf
nix/: rust-builder.nix  shell.nix
src/: api_error.rs  cli.rs  clients.rs  config.rs  ip_range.rs  main.rs  metrics.rs  ops.rs  register.rs  remove.rs  remove_expired.rs  status.rs  unregister.rs  wg_server.rs
src/dump/: mod.rs  peer.rs
src/wg/: conf.rs  mod.rs  peer.rs  quick.rs  set.rs  show.rs
src/wg_server/: mod.rs  peer.rs
