[package]
name = "gnosis_vpn-server"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
figment = "0.10"
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
rand = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.43.0", features = ["rt", "time"] }
prometheus = "0.14"